updated readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "helpdesk",
+  "name": "angular-i18n-by-example",
+  "description": "Sample application to demonstrate different i18n solutions",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
+    "build": "ng build",
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "test": "ng test",
