--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
     "materialize-css": "^0.98.0",
+    "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
